renamed mesh files

--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -58,8 +58,8 @@
     <ClCompile Include="source\log.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\material.cpp" />
+    <ClCompile Include="source\mesh_component.cpp" />
     <ClCompile Include="source\mesh.cpp" />
-    <ClCompile Include="source\mesh_resource.cpp" />
     <ClCompile Include="source\camera_controller.cpp" />
     <ClCompile Include="source\precompiled.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -109,8 +109,8 @@
     <ClInclude Include="source\input.h" />
     <ClInclude Include="source\log.h" />
     <ClInclude Include="source\material.h" />
+    <ClInclude Include="source\mesh_component.h" />
     <ClInclude Include="source\mesh.h" />
-    <ClInclude Include="source\mesh_resource.h" />
     <ClInclude Include="source\camera_controller.h" />
     <ClInclude Include="source\precompiled.h" />
     <ClInclude Include="source\resource_factory.h" />
