--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -61,7 +61,7 @@
     <ClCompile Include="source\shader.cpp" />
     <ClCompile Include="source\text.cpp" />
     <ClCompile Include="source\window.cpp" />
-    <ClCompile Include="source\mesh.cpp" />
+    <ClCompile Include="source\mesh_component.cpp" />
     <ClCompile Include="source\scene.cpp" />
     <ClCompile Include="source\entity.cpp" />
     <ClCompile Include="source\transform.cpp" />
@@ -69,11 +69,11 @@
     <ClCompile Include="source\material.cpp" />
     <ClCompile Include="source\camera.cpp" />
     <ClCompile Include="source\spatial_component.cpp" />
-    <ClCompile Include="source\movement_controller.cpp" />
     <ClCompile Include="source\frame_buffer.cpp" />
     <ClCompile Include="source\texture.cpp" />
-    <ClCompile Include="source\mesh_resource.cpp" />
+    <ClCompile Include="source\mesh.cpp" />
     <ClCompile Include="source\resource_manager.cpp" />
+    <ClCompile Include="source\camera_controller.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libraries\includes\imGui\imconfig.h">
@@ -123,7 +123,7 @@
     <ClInclude Include="source\window.h" />
     <ClInclude Include="source\context.h" />
     <ClInclude Include="source\error.h" />
-    <ClInclude Include="source\mesh.h" />
+    <ClInclude Include="source\mesh_component.h" />
     <ClInclude Include="source\scene.h" />
     <ClInclude Include="source\entity.h" />
     <ClInclude Include="source\component.h" />
@@ -132,12 +132,13 @@
     <ClInclude Include="source\camera.h" />
     <ClInclude Include="source\context_ownership.h" />
     <ClInclude Include="source\spatial_component.h" />
-    <ClInclude Include="source\movement_controller.h" />
     <ClInclude Include="source\frame_buffer.h" />
     <ClInclude Include="source\texture.h" />
-    <ClInclude Include="source\mesh_resource.h" />
+    <ClInclude Include="source\mesh.h" />
     <ClInclude Include="source\resource_manager.h" />
     <ClInclude Include="source\this_type.h" />
     <ClInclude Include="source\resource_factory.h" />
+    <ClInclude Include="source\camera_controller.h" />
+    <ClInclude Include="source\polymorphic.h" />
   </ItemGroup>
 </Project>
