renamed camera to camera_component

--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -67,7 +67,7 @@
     <ClCompile Include="source\transform.cpp" />
     <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\material.cpp" />
-    <ClCompile Include="source\camera.cpp" />
+    <ClCompile Include="source\camera_component.cpp" />
     <ClCompile Include="source\spatial_component.cpp" />
     <ClCompile Include="source\frame_buffer.cpp" />
     <ClCompile Include="source\texture.cpp" />
@@ -129,7 +129,7 @@
     <ClInclude Include="source\component.h" />
     <ClInclude Include="source\transform.h" />
     <ClInclude Include="source\material.h" />
-    <ClInclude Include="source\camera.h" />
+    <ClInclude Include="source\camera_component.h" />
     <ClInclude Include="source\context_ownership.h" />
     <ClInclude Include="source\spatial_component.h" />
     <ClInclude Include="source\frame_buffer.h" />
