renamed unique to box
still uses std type alias. also renamed make_unique to make_box and replaced all references.

--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -140,5 +140,6 @@
     <ClInclude Include="source\resource_factory.h" />
     <ClInclude Include="source\camera_controller.h" />
     <ClInclude Include="source\polymorphic.h" />
+    <ClInclude Include="source\memory.h" />
   </ItemGroup>
 </Project>
