removed dyn_arr vector alias

--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -109,7 +109,7 @@
     <ClInclude Include="source\input.h" />
     <ClInclude Include="source\log.h" />
     <ClInclude Include="source\material.h" />
-    <ClInclude Include="source\memory.h" />
+    <ClInclude Include="source\box.h" />
     <ClInclude Include="source\mesh_component.h" />
     <ClInclude Include="source\mesh.h" />
     <ClInclude Include="source\camera_controller.h" />
