--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -140,6 +140,6 @@
     <ClInclude Include="source\resource_factory.h" />
     <ClInclude Include="source\camera_controller.h" />
     <ClInclude Include="source\polymorphic.h" />
-    <ClInclude Include="source\memory.h" />
+    <ClInclude Include="source\box.h" />
   </ItemGroup>
 </Project>
