--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -45,6 +45,7 @@
     <ClCompile Include="libraries\includes\imGui\imgui_tables.cpp" />
     <ClCompile Include="libraries\includes\imGui\imgui_widgets.cpp" />
     <ClCompile Include="source\application.cpp" />
+    <ClCompile Include="source\asset.cpp" />
     <ClCompile Include="source\camera_component.cpp" />
     <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\editor.cpp" />
@@ -71,6 +72,8 @@
     <ClCompile Include="source\scene.cpp" />
     <ClCompile Include="source\shader.cpp" />
     <ClCompile Include="source\spatial_component.cpp" />
+    <ClCompile Include="source\asset_manager.cpp" />
+    <ClCompile Include="source\asset_loader.cpp" />
     <ClCompile Include="source\stubs\stub.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='DebugEditor|x64'">true</ExcludedFromBuild>
@@ -94,6 +97,7 @@
     <ClInclude Include="libraries\includes\imGui\imstb_textedit.h" />
     <ClInclude Include="libraries\includes\imGui\imstb_truetype.h" />
     <ClInclude Include="source\application.h" />
+    <ClInclude Include="source\asset.h" />
     <ClInclude Include="source\camera_component.h" />
     <ClInclude Include="source\component.h" />
     <ClInclude Include="source\context.h" />
@@ -121,6 +125,8 @@
     <ClInclude Include="source\shader.h" />
     <ClInclude Include="source\spatial_component.h" />
     <ClInclude Include="source\polymorphic.h" />
+    <ClInclude Include="source\asset_manager.h" />
+    <ClInclude Include="source\asset_loader.h" />
     <ClInclude Include="source\this_type.h" />
     <ClInclude Include="source\stubs\stub.h" />
     <ClInclude Include="source\text.h" />
