--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="source\spatial_component.cpp" />
     <ClCompile Include="source\asset_manager.cpp" />
     <ClCompile Include="source\asset_loader.cpp" />
+    <ClCompile Include="source\string_util.cpp" />
     <ClCompile Include="source\stubs\stub.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='DebugEditor|x64'">true</ExcludedFromBuild>
@@ -125,6 +126,7 @@
     <ClInclude Include="source\asset_manager.h" />
     <ClInclude Include="source\asset_loader.h" />
     <ClInclude Include="source\serial_conversion.h" />
+    <ClInclude Include="source\string_util.h" />
     <ClInclude Include="source\this_type.h" />
     <ClInclude Include="source\stubs\stub.h" />
     <ClInclude Include="source\text.h" />
