--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="source\asset_loader.h" />
     <ClInclude Include="source\serial_conversion.h" />
     <ClInclude Include="source\string_util.h" />
+    <ClInclude Include="source\vector_util.h" />
     <ClInclude Include="source\this_type.h" />
     <ClInclude Include="source\stubs\stub.h" />
     <ClInclude Include="source\text.h" />
