--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -74,6 +74,7 @@
     <ClCompile Include="source\asset_manager.cpp" />
     <ClCompile Include="source\asset_loader.cpp" />
     <ClCompile Include="source\string_util.cpp" />
+    <ClCompile Include="source\mesh_import.cpp" />
     <ClCompile Include="source\stubs\stub.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='DebugEditor|x64'">true</ExcludedFromBuild>
@@ -127,6 +128,7 @@
     <ClInclude Include="source\asset_loader.h" />
     <ClInclude Include="source\serial_conversion.h" />
     <ClInclude Include="source\string_util.h" />
+    <ClInclude Include="source\mesh_import.h" />
     <ClInclude Include="source\vector_util.h" />
     <ClInclude Include="source\this_type.h" />
     <ClInclude Include="source\stubs\stub.h" />
