--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -77,6 +77,7 @@
     <ClCompile Include="source\asset_manager.cpp" />
     <ClCompile Include="source\asset_loader.cpp" />
     <ClCompile Include="source\string_util.cpp" />
+    <ClCompile Include="source\mesh_import.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libraries\includes\imGui\imconfig.h">
@@ -149,5 +150,6 @@
     <ClInclude Include="source\serial_conversion.h" />
     <ClInclude Include="source\string_util.h" />
     <ClInclude Include="source\vector_util.h" />
+    <ClInclude Include="source\mesh_import.h" />
   </ItemGroup>
 </Project>
