moved .h files into include directory

--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -115,45 +115,45 @@
     <ClInclude Include="source\stubs\stub.h">
       <Filter>Stubs</Filter>
     </ClInclude>
-    <ClInclude Include="source\application.h" />
-    <ClInclude Include="source\editor_manager.h" />
-    <ClInclude Include="source\editor_icons.h" />
-    <ClInclude Include="source\editor_icons_all.h" />
-    <ClInclude Include="source\editor_window.h" />
-    <ClInclude Include="source\graphics.h" />
-    <ClInclude Include="source\input.h" />
-    <ClInclude Include="source\log.h" />
-    <ClInclude Include="source\precompiled.h" />
-    <ClInclude Include="source\shader.h" />
-    <ClInclude Include="source\text.h" />
-    <ClInclude Include="source\window_handle.h" />
-    <ClInclude Include="source\context.h" />
-    <ClInclude Include="source\error.h" />
-    <ClInclude Include="source\mesh_component.h" />
-    <ClInclude Include="source\scene.h" />
-    <ClInclude Include="source\entity.h" />
-    <ClInclude Include="source\component.h" />
-    <ClInclude Include="source\transform.h" />
-    <ClInclude Include="source\material.h" />
-    <ClInclude Include="source\camera_component.h" />
-    <ClInclude Include="source\context_ownership.h" />
-    <ClInclude Include="source\spatial_component.h" />
-    <ClInclude Include="source\frame_buffer.h" />
-    <ClInclude Include="source\texture.h" />
-    <ClInclude Include="source\mesh.h" />
-    <ClInclude Include="source\this_type.h" />
-    <ClInclude Include="source\camera_controller.h" />
-    <ClInclude Include="source\polymorphic.h" />
-    <ClInclude Include="source\mem_util.h" />
-    <ClInclude Include="source\fields_engine_defines.h" />
-    <ClInclude Include="source\asset.h" />
-    <ClInclude Include="source\asset_manager.h" />
-    <ClInclude Include="source\asset_loader.h" />
-    <ClInclude Include="source\serial_conversion.h" />
-    <ClInclude Include="source\string_util.h" />
-    <ClInclude Include="source\vector_util.h" />
-    <ClInclude Include="source\mesh_import.h" />
-    <ClInclude Include="source\texture_import.h" />
-    <ClInclude Include="source\editor.h" />
+    <ClInclude Include="include\application.h" />
+    <ClInclude Include="include\editor_manager.h" />
+    <ClInclude Include="include\editor_icons.h" />
+    <ClInclude Include="include\editor_icons_all.h" />
+    <ClInclude Include="include\editor_window.h" />
+    <ClInclude Include="include\graphics.h" />
+    <ClInclude Include="include\input.h" />
+    <ClInclude Include="include\log.h" />
+    <ClInclude Include="include\precompiled.h" />
+    <ClInclude Include="include\shader.h" />
+    <ClInclude Include="include\text.h" />
+    <ClInclude Include="include\window_handle.h" />
+    <ClInclude Include="include\context.h" />
+    <ClInclude Include="include\error.h" />
+    <ClInclude Include="include\mesh_component.h" />
+    <ClInclude Include="include\scene.h" />
+    <ClInclude Include="include\entity.h" />
+    <ClInclude Include="include\component.h" />
+    <ClInclude Include="include\transform.h" />
+    <ClInclude Include="include\material.h" />
+    <ClInclude Include="include\camera_component.h" />
+    <ClInclude Include="include\context_ownership.h" />
+    <ClInclude Include="include\spatial_component.h" />
+    <ClInclude Include="include\frame_buffer.h" />
+    <ClInclude Include="include\texture.h" />
+    <ClInclude Include="include\mesh.h" />
+    <ClInclude Include="include\this_type.h" />
+    <ClInclude Include="include\camera_controller.h" />
+    <ClInclude Include="include\polymorphic.h" />
+    <ClInclude Include="include\mem_util.h" />
+    <ClInclude Include="include\fields_engine_defines.h" />
+    <ClInclude Include="include\asset.h" />
+    <ClInclude Include="include\asset_manager.h" />
+    <ClInclude Include="include\asset_loader.h" />
+    <ClInclude Include="include\serial_conversion.h" />
+    <ClInclude Include="include\string_util.h" />
+    <ClInclude Include="include\vector_util.h" />
+    <ClInclude Include="include\mesh_import.h" />
+    <ClInclude Include="include\texture_import.h" />
+    <ClInclude Include="include\editor.h" />
   </ItemGroup>
 </Project>
