--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # Add custom build Configurations
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release;DebugEditor;ReleaseEditor" CACHE STRING "Configurations" FORCE)
 
+# Map custom configurations to existing ones
+set(CMAKE_C_FLAGS_DEBUGEDITOR ${CMAKE_C_FLAGS_DEBUG})
+set(CMAKE_CXX_FLAGS_DEBUGEDITOR ${CMAKE_CXX_FLAGS_DEBUG})
+set(CMAKE_EXE_LINKER_FLAGS_DEBUGEDITOR ${CMAKE_EXE_LINKER_FLAGS_DEBUG})
+set(CMAKE_SHARED_LINKER_FLAGS_DEBUGEDITOR ${CMAKE_SHARED_LINKER_FLAGS_DEBUG})
+
+set(CMAKE_C_FLAGS_RELEASEEDITOR ${CMAKE_C_FLAGS_RELEASE})
+set(CMAKE_CXX_FLAGS_RELEASEEDITOR ${CMAKE_CXX_FLAGS_RELEASE})
+set(CMAKE_EXE_LINKER_FLAGS_RELEASEEDITOR ${CMAKE_EXE_LINKER_FLAGS_RELEASE})
+set(CMAKE_SHARED_LINKER_FLAGS_RELEASEEDITOR ${CMAKE_SHARED_LINKER_FLAGS_RELEASE})
+
 # Add source files
 file(GLOB_RECURSE SOURCES 
     ${CMAKE_SOURCE_DIR}/source/*.cpp
@@ -30,6 +41,48 @@ target_compile_definitions(fields_engine PRIVATE
     $<$<CONFIG:ReleaseEditor>:RELEASE;EDITOR>
 )
 
+# Compiler-specific optimization flags
+if(MSVC)
+    target_compile_options(${PROJECT_NAME} PRIVATE
+        $<$<CONFIG:Debug>:/Od>
+        $<$<CONFIG:Release>:/O2>
+        $<$<CONFIG:DebugEditor>:/Od>
+        $<$<CONFIG:ReleaseEditor>:/O2>
+    )
+else()
+    target_compile_options(${PROJECT_NAME} PRIVATE
+        $<$<CONFIG:Debug>:-O0>
+        $<$<CONFIG:Release>:-O3>
+        $<$<CONFIG:DebugEditor>:-O0>
+        $<$<CONFIG:ReleaseEditor>:-O3>
+    )
+endif()
+
+# Apply runtime library flags per configuration
+target_compile_options(fields_engine PRIVATE 
+    $<$<CONFIG:Debug>:/MDd>
+    $<$<CONFIG:Release>:/MD>
+    $<$<CONFIG:DebugEditor>:/MDd>
+    $<$<CONFIG:ReleaseEditor>:/MD>
+)
+
+
+
+# Ensure runtime working directory is set to the original source directory
+#set_target_properties(fields_engine PROPERTIES 
+#    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}
+#    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}
+#    RUNTIME_OUTPUT_DIRECTORY_DEBUGEDITOR ${CMAKE_SOURCE_DIR}
+#    RUNTIME_OUTPUT_DIRECTORY_RELEASEEDITOR ${CMAKE_SOURCE_DIR}
+#)
+
+set_target_properties(fields_engine PROPERTIES 
+    VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Visual Studio-specific
+    XCODE_ATTRIBUTE_DEBUG_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Xcode-specific
+)
+
+#----------------------
+
 #if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 #    target_compile_definitions(fields_engine PRIVATE _DEBUG)
 #elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
@@ -40,15 +93,6 @@ target_compile_definitions(fields_engine PRIVATE
 #    target_compile_definitions(fields_engine PRIVATE NDEBUG PRIVATE EDITOR)
 #endif()
 
-# Ensure runtime working directory is set to the original source directory
-set_target_properties(fields_engine PROPERTIES 
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}
-    RUNTIME_OUTPUT_DIRECTORY_DEBUGEDITOR ${CMAKE_SOURCE_DIR}
-    RUNTIME_OUTPUT_DIRECTORY_RELEASEEDITOR ${CMAKE_SOURCE_DIR}
-)
-
-
 # Link against the correct runtime library for each build type
 #if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "DebugEditor")
 #    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")  # Debug runtime DLL
@@ -56,22 +100,6 @@ set_target_properties(fields_engine PROPERTIES
 #    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")  # Release runtime DLL
 #endif()
 
-# Apply runtime library flags per configuration
-target_compile_options(fields_engine PRIVATE 
-    $<$<CONFIG:Debug>:/MDd>
-    $<$<CONFIG:Release>:/MD>
-    $<$<CONFIG:DebugEditor>:/MDd>
-    $<$<CONFIG:ReleaseEditor>:/MD>
-)
-
-set_target_properties(fields_engine PROPERTIES 
-    VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Visual Studio-specific
-    XCODE_ATTRIBUTE_DEBUG_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Xcode-specific
-)
-
-# Same linker flags for the editor configurations
-set(CMAKE_EXE_LINKER_FLAGS_DEBUGEDITOR "${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
-set(CMAKE_EXE_LINKER_FLAGS_RELEASEEDITOR "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
 
 # Visual Studio project properties
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
@@ -97,3 +125,5 @@ target_link_libraries(fields_engine PRIVATE
 # Use precompiled header fields_engine.h
 target_precompile_headers(fields_engine PRIVATE ${CMAKE_SOURCE_DIR}/include/fields_engine.h)
 
+# Generate Visual Studio solution
+set(CMAKE_SUPPRESS_REGENERATION true)
