cleaned up cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,6 @@ project(fields_engine) # No versioning yet
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Define a CMake option for editor configuration
-#option(BUILD_EDITOR "Build the editor" ON)
-
 # Add custom build Configurations
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release;DebugEditor;ReleaseEditor" CACHE STRING "Configurations" FORCE)
 
@@ -19,7 +16,6 @@ set(CMAKE_C_FLAGS_DEBUGEDITOR ${CMAKE_C_FLAGS_DEBUG})
 set(CMAKE_CXX_FLAGS_DEBUGEDITOR ${CMAKE_CXX_FLAGS_DEBUG})
 set(CMAKE_EXE_LINKER_FLAGS_DEBUGEDITOR ${CMAKE_EXE_LINKER_FLAGS_DEBUG})
 set(CMAKE_SHARED_LINKER_FLAGS_DEBUGEDITOR ${CMAKE_SHARED_LINKER_FLAGS_DEBUG})
-
 set(CMAKE_C_FLAGS_RELEASEEDITOR ${CMAKE_C_FLAGS_RELEASE})
 set(CMAKE_CXX_FLAGS_RELEASEEDITOR ${CMAKE_CXX_FLAGS_RELEASE})
 set(CMAKE_EXE_LINKER_FLAGS_RELEASEEDITOR ${CMAKE_EXE_LINKER_FLAGS_RELEASE})
@@ -32,9 +28,9 @@ file(GLOB_RECURSE SOURCES
 )
 
 # Create the executable (must come before any target_ statements)
-add_executable(fields_engine ${SOURCES})
+add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_compile_definitions(fields_engine PRIVATE 
+target_compile_definitions(${PROJECT_NAME} PRIVATE 
     $<$<CONFIG:Debug>:_DEBUG>
     $<$<CONFIG:Release>:RELEASE>
     $<$<CONFIG:DebugEditor>:_DEBUG;EDITOR>
@@ -59,71 +55,46 @@ else()
 endif()
 
 # Apply runtime library flags per configuration
-target_compile_options(fields_engine PRIVATE 
+target_compile_options(${PROJECT_NAME} PRIVATE 
     $<$<CONFIG:Debug>:/MDd>
     $<$<CONFIG:Release>:/MD>
     $<$<CONFIG:DebugEditor>:/MDd>
     $<$<CONFIG:ReleaseEditor>:/MD>
 )
 
-
-
-# Ensure runtime working directory is set to the original source directory
-#set_target_properties(fields_engine PROPERTIES 
-#    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}
-#    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}
-#    RUNTIME_OUTPUT_DIRECTORY_DEBUGEDITOR ${CMAKE_SOURCE_DIR}
-#    RUNTIME_OUTPUT_DIRECTORY_RELEASEEDITOR ${CMAKE_SOURCE_DIR}
-#)
-
-set_target_properties(fields_engine PROPERTIES 
+set_target_properties(${PROJECT_NAME} PROPERTIES 
     VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Visual Studio-specific
     XCODE_ATTRIBUTE_DEBUG_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Xcode-specific
 )
 
-#----------------------
-
-#if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-#    target_compile_definitions(fields_engine PRIVATE _DEBUG)
-#elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
-#    target_compile_definitions(fields_engine PRIVATE NDEBUG)
-#elseif(CMAKE_BUILD_TYPE STREQUAL "DebugEditor")
-#    target_compile_definitions(fields_engine PRIVATE _DEBUG PRIVATE EDITOR)
-#elseif(CMAKE_BUILD_TYPE STREQUAL "ReleaseEditor")
-#    target_compile_definitions(fields_engine PRIVATE NDEBUG PRIVATE EDITOR)
-#endif()
-
-# Link against the correct runtime library for each build type
-#if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "DebugEditor")
-#    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")  # Debug runtime DLL
-#elseif(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "ReleaseEditor")
-#    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")  # Release runtime DLL
-#endif()
-
-
 # Visual Studio project properties
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT fields_engine)
+set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+
+# Organize source files into logical groups
+source_group("Sporce Files" FILES ${SOURCES})
+source_group("Header Files" FILES ${CMAKE_SOURCE_DIR}/include)
+source_group("External" FILES ${CMAKE_SOURCE_DIR}/external)
 
 # Add header files
-target_include_directories(fields_engine PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 # Add external dependency files
-target_include_directories(fields_engine PRIVATE ${CMAKE_SOURCE_DIR}/external)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/external)
 
 # Set the location of the libraries
 set(GLFW_LIB_PATH ${CMAKE_SOURCE_DIR}/external/glfw)
 set(SDL3_LIB_PATH ${CMAKE_SOURCE_DIR}/external/sdl3)
 
 # Specify the libraries to link
-target_link_libraries(fields_engine PRIVATE 
+target_link_libraries(${PROJECT_NAME} PRIVATE 
     ${GLFW_LIB_PATH}/glfw3.lib  # Linking GLFW
     opengl32                    # Linking OpenGL
     ${SDL3_LIB_PATH}/SDL3.lib   # Linking SDL3
 )
 
 # Use precompiled header fields_engine.h
-target_precompile_headers(fields_engine PRIVATE ${CMAKE_SOURCE_DIR}/include/fields_engine.h)
+target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include/fields_engine.h)
 
 # Generate Visual Studio solution
 set(CMAKE_SUPPRESS_REGENERATION true)
