--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,47 @@
-# Set minimum CMake version
 cmake_minimum_required(VERSION 3.10)
 
 # Set project name and version
-project(fields_engine) # No versioning yet
+project(FieldsEngine) # No versioning yet
 
 # Set C++ language standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Add custom build Configurations
-set(CMAKE_CONFIGURATION_TYPES "Debug;Release;DebugEditor;ReleaseEditor" CACHE STRING "Configurations" FORCE)
+# Define the source, include, and external directories
+set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/source)
+set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
+set(EXTERNAL_DIR ${CMAKE_SOURCE_DIR}/external)
+
+# Precompiled header
+set(PCH_HEADER ${INCLUDE_DIR}/fields_engine.h)
+
+# Recursively get all .cpp and .h files from source, include, and external directories
+file(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIR}/*.cpp)
+file(GLOB_RECURSE INCLUDE_FILES ${INCLUDE_DIR}/*.h)
+file(GLOB_RECURSE EXTERNAL_FILES ${EXTERNAL_DIR}/*/*.cpp ${EXTERNAL_DIR}/*/*.h)
+
+# Create the primary executable
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${INCLUDE_FILES} ${EXTERNAL_FILES})
+
+# Add header files
+target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
+
+# Add external dependency files
+target_include_directories(${PROJECT_NAME} PRIVATE ${EXTERNAL_DIR})
+
+# Set the location of the libraries
+set(GLFW_LIB_PATH ${EXTERNAL_DIR}/glfw)
+set(SDL3_LIB_PATH ${EXTERNAL_DIR}/sdl3)
+
+# Specify the libraries to link
+target_link_libraries(${PROJECT_NAME} PRIVATE 
+    ${GLFW_LIB_PATH}/glfw3.lib  # Linking GLFW
+    opengl32                    # Linking OpenGL
+    ${SDL3_LIB_PATH}/SDL3.lib   # Linking SDL3
+)
+
+# Define configurations
+set(CMAKE_CONFIGURATION_TYPES Debug Release DebugEditor ReleaseEditor)
 
 # Map custom configurations to existing ones
 set(CMAKE_C_FLAGS_DEBUGEDITOR ${CMAKE_C_FLAGS_DEBUG})
@@ -21,23 +53,15 @@ set(CMAKE_CXX_FLAGS_RELEASEEDITOR ${CMAKE_CXX_FLAGS_RELEASE})
 set(CMAKE_EXE_LINKER_FLAGS_RELEASEEDITOR ${CMAKE_EXE_LINKER_FLAGS_RELEASE})
 set(CMAKE_SHARED_LINKER_FLAGS_RELEASEEDITOR ${CMAKE_SHARED_LINKER_FLAGS_RELEASE})
 
-# Add source files
-file(GLOB_RECURSE SOURCES 
-    ${CMAKE_SOURCE_DIR}/source/*.cpp
-    ${CMAKE_SOURCE_DIR}/external/**/*.cpp
-)
-
-# Create the executable (must come before any target_ statements)
-add_executable(${PROJECT_NAME} ${SOURCES})
-
+# Define compiler preprocessor definitions for the all configurations
 target_compile_definitions(${PROJECT_NAME} PRIVATE 
     $<$<CONFIG:Debug>:_DEBUG>
-    $<$<CONFIG:Release>:RELEASE>
+    $<$<CONFIG:Release>:NDEBUG>
     $<$<CONFIG:DebugEditor>:_DEBUG;EDITOR>
-    $<$<CONFIG:ReleaseEditor>:RELEASE;EDITOR>
+    $<$<CONFIG:ReleaseEditor>:NDEBUG;EDITOR>
 )
 
-# Compiler-specific optimization flags
+# Set compiler-specific optimization flags per-configuration
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE
         $<$<CONFIG:Debug>:/Od>
@@ -54,7 +78,7 @@ else()
     )
 endif()
 
-# Apply runtime library flags per configuration
+# Apply runtime library flags per-configuration
 target_compile_options(${PROJECT_NAME} PRIVATE 
     $<$<CONFIG:Debug>:/MDd>
     $<$<CONFIG:Release>:/MD>
@@ -62,39 +86,40 @@ target_compile_options(${PROJECT_NAME} PRIVATE
     $<$<CONFIG:ReleaseEditor>:/MD>
 )
 
+# Add precompiled header to the executable
+target_precompile_headers(${PROJECT_NAME} PRIVATE ${PCH_HEADER})
+
+# Set the output directory for executables
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+
+# Set working directory for debugging
 set_target_properties(${PROJECT_NAME} PROPERTIES 
     VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Visual Studio-specific
     XCODE_ATTRIBUTE_DEBUG_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # Xcode-specific
 )
 
 # Visual Studio project properties
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
 
-# Organize source files into logical groups
-source_group("Sporce Files" FILES ${SOURCES})
-source_group("Header Files" FILES ${CMAKE_SOURCE_DIR}/include)
-source_group("External" FILES ${CMAKE_SOURCE_DIR}/external)
+# Organize files into filters for Visual Studio
+source_group(TREE ${SOURCE_DIR} PREFIX "Source" FILES ${SOURCE_FILES})
+source_group(TREE ${INCLUDE_DIR} PREFIX "Include" FILES ${INCLUDE_FILES})
+source_group(TREE ${EXTERNAL_DIR} PREFIX "External" FILES ${EXTERNAL_FILES})
 
-# Add header files
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
-# Add external dependency files
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/external)
 
-# Set the location of the libraries
-set(GLFW_LIB_PATH ${CMAKE_SOURCE_DIR}/external/glfw)
-set(SDL3_LIB_PATH ${CMAKE_SOURCE_DIR}/external/sdl3)
+# Custom commands to regenerate build system when source files change
+#file(GLOB_RECURSE ALL_FILES ${SOURCE_DIR}/* ${INCLUDE_DIR}/* ${EXTERNAL_DIR}/*)
+#add_custom_target(
+#    REGEN
+#    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/CMakeFiles/regen.cmake
+#    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+#    COMMENT "Regenerating build system"
+#)
+#set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/CMakeFiles/regen.cmake)
 
-# Specify the libraries to link
-target_link_libraries(${PROJECT_NAME} PRIVATE 
-    ${GLFW_LIB_PATH}/glfw3.lib  # Linking GLFW
-    opengl32                    # Linking OpenGL
-    ${SDL3_LIB_PATH}/SDL3.lib   # Linking SDL3
-)
 
-# Use precompiled header fields_engine.h
-target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include/fields_engine.h)
 
-# Generate Visual Studio solution
-set(CMAKE_SUPPRESS_REGENERATION true)
+
+
+#set(CMAKE_SUPPRESS_REGENERATION true)
